# chatbot

./: .gitignore  Makefile  README.md  docker-compose.yml  index.html
client/: .dockerignore  Dockerfile  README.md  SETUP_INSTRUCTIONS.md  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.ts
client/public/: chat-widget.js
client/src/: routeTree.gen.ts
client/src/assets/: logo.tsx
client/src/components/: profile-dropdown.tsx  sign-out-dialog.tsx
client/src/components/auth/: auth-provider.tsx  index.ts  require-role.tsx  token-refresh-monitor.tsx
client/src/components/data-table/: pagination.tsx
client/src/components/layout/: app-sidebar.tsx  dashboard-layout.tsx  nav-user.tsx  team-switcher.tsx  types.ts
client/src/components/layout/data/: sidebar-data.ts
client/src/components/layout/utils/: sidebar-filter.ts
client/src/features/auth/: auth-layout.tsx
client/src/features/auth/sign-in/: sign-in-2.tsx
client/src/features/chat-widgets/: index.tsx
client/src/features/chats/: chat-history-modal.tsx  index.tsx
client/src/features/dashboard/: index.tsx
client/src/features/errors/: forbidden.tsx
client/src/features/knowledge-base/: system-downtime.tsx  work-status.tsx
client/src/features/projects/: index.tsx
client/src/features/settings/: index.tsx
client/src/features/users/: index.tsx
client/src/hooks/: use-auth.ts  use-debounced-value.ts  use-display-preferences.ts  use-document.ts  use-table-url-state.ts  use-users.ts
client/src/lib/: api-client.ts  auth-guard.ts
client/src/lib/api/: analytics.api.ts  auth.api.ts  chat-widgets.api.ts  chat.api.ts  document.api.ts  feedback.api.ts  projects.api.ts  users.api.ts
client/src/routes/: __root.tsx  share.$threadId.tsx
client/src/routes/(auth)/: sign-in.tsx  sign-up.tsx
client/src/routes/_authenticated/: route.tsx
client/src/stores/: auth-store.ts
client/src/styles/: index.css  theme.css
client/src/types/: auth.types.ts  document.types.ts  user.types.ts
server/: .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .pylintrc  CONTRIBUTING.md  DASHBOARD_PLAN.md  DATABASE_MIGRATION_GUIDE.md  Dockerfile  LINTING_GUIDE.md  LINTING_SETUP_COMPLETE.md  Makefile  QUICKSTART.md  README.md  SIMPLE_AUTH_EXAMPLE.md  commitlint.config.js  coverage.xml  docker-compose.yml  entrypoint.sh  pyproject.toml  pyrightconfig.json  pytest.ini
server/.kiro/specs/ai-agent-chat/: requirements.md
server/.kiro/specs/ai-agent-platform/: AGENT_ARCHITECTURE.md  INTEGRATION_IMPLEMENTATION.md  SPEC_SUMMARY.md  conversation-flow.md  design.md  monitoring-guide.md  requirements.md  tasks.md
server/.kiro/specs/eplks-langgraph-agent/: design.md  requirements.md  tasks.md
server/.kiro/specs/worker-status-management/: design.md  requirements.md  tasks.md
server/alembic/: env.py
server/alembic/versions/: 20250110_1755_add_file_hash_to_documents.py  20250130_update_user_model_add_phone_split_name.py  20251029_1851_dbc1706062c5_initial_migration_with_all_models.py  20251031_1832_c6b4f57b71ff_add_title_and_status_to_documents.py  20251105_1823_dcfc9be4cb42_make_user_id_optional_in_conversations_.py  20251111_122236_add_icon_visibility_to_chat_widgets.py  20251111_add_chat_widgets_table.py  20251118_1943_e4392d909b19_add_voice_call_metadata_to_conversation_.py  20251119_1937_a3954e29eb98_add_sip_caller_fields_to_conversations.py  20251120_1339_b5f3e8a12c4d_remove_sip_uri_and_display_name.py  20251205_1423_4c590efe6521_add_projects_table.py
server/app/: main.py
server/app/api/: deps.py
server/app/api/middleware/: __init__.py  auth.py  error_handler.py  logging.py  rate_limit.py
server/app/api/v1/: __init__.py  analytics.py  auth.py  chat.py  chat_widgets.py  conversation.py  feedback.py  knowledge_base.py  messages.py  projects.py  users.py
server/app/cache/: __init__.py  cache_service.py  rate_limiter.py  redis_client.py
server/app/core/: __init__.py  config.py  constants.py  exceptions.py  logging.py  metrics.py  security.py
server/app/db/: base_class.py  init_db.py  session.py  sync_db.py
server/app/formzed/service/: agent_a.py  agent_b.py  agent_c.py  agent_edit.py  main_graph.py  schema_loader.py  surveyjs_definition.json  test_schema_loader.py  validator.py
server/app/formzed/vector_db/: index.faiss  index.pkl
server/app/integrations/: __init__.py  langfuse_client.py  openai_client.py
server/app/models/: __init__.py  analytics.py  chat_widget.py  conversation.py  document.py  feedback.py  message.py  project.py  user.py
server/app/repositories/: __init__.py  analytics_repository.py  base.py  chat_widget_repository.py  conversation_repository.py  document_repository.py  feedback_repository.py  message_repository.py  project_repository.py  user_repository.py
server/app/schemas/: __init__.py  agent.py  analytics.py  auth.py  chat.py  chat_widget.py  common.py  conversation.py  feedback.py  knowledge_base.py  project.py  user.py
server/app/services/: chat_widget_service.py  project_service.py
server/app/services/analytics/: __init__.py  analytics_service.py  prometheus_analytics_service.py
server/app/services/auth/: __init__.py  auth_service.py  token_service.py
server/app/services/conversation/: conversation_service.py
server/app/services/feedback/: feedback_service.py
server/app/services/graph/: workflow.py
server/app/services/graph/tools/: __init__.py  kb_tools.py
server/app/services/knowledge_base/: __init__.py  document_processor.py  embedding_service.py  kb_service.py  retrieval_service.py
server/app/services/messages/: __init__.py  message_service.py
server/app/services/user/: __init__.py  user_service.py
server/app/utils/: formatters.py  sanitizers.py  validators.py
server/app/vector_store/: __init__.py  qdrant_client.py  vector_operations.py
server/grafana/dashboards/: dashboards.yml
server/prometheus/: alerts.yml  prometheus.yml
server/scripts/: create_db.py  db_langgraph.py  init_db.py  init_db.sh  init_db_langgraph.py  setup_db.sh  verify_integrations.py  verify_setup.sh
(+91 files in other folders)
